@@ -4,10 +4,7 @@ import fr.inra.oresing.domain.application.configuration.ConfigurationSchemaNode;
 import fr.inra.oresing.domain.application.configuration.type.*;
 import org.apache.commons.collections4.CollectionUtils;
 
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 class PatternComponentExampleBuilder {
     protected static final String SWC_PATTERN = "\"SWC_(.*)_(.*)\"";
@@ -28,15 +25,22 @@ class PatternComponentExampleBuilder {
             final TitleType exportHeader,
             final String prefix
     ) {
-        return new PatternComponentType(new LinkedHashMap<>() {{
-            put(ConfigurationSchemaNode.OA_PATTERN_FOR_COMPONENTS, new StringType(pattern));
-            put(ConfigurationSchemaNode.OA_TAGS, new CollectionType.ArrayType<>(TagExampleBuilder.buildTagArray(List.of("context")), false, false, StringType.EMPTY_INSTANCE()));
-            put(ConfigurationSchemaNode.OA_EXPORT_HEADER, exportHeader);
-            put(ConfigurationSchemaNode.OA_REQUIRED, BooleanExampleBuilder.FALSE);
-            put(ConfigurationSchemaNode.OA_CHECKER, FloatCheckerExampleBuilder.OF);
-            put(ConfigurationSchemaNode.OA_COMPONENT_QUALIFIERS, CollectionExampleBuilder.COMPONENT_QUALIFIERS(prefix));
-            put(ConfigurationSchemaNode.OA_COMPONENT_ADJACENTS, CollectionExampleBuilder.COMPONENT_ADJACENTS(prefix));
-        }});
+        LinkedHashMap<String, ConfigurationSchemaNodeType> children = new LinkedHashMap<>();
+
+        children.put(ConfigurationSchemaNode.OA_PATTERN_FOR_COMPONENTS, new StringType(pattern));
+        children.put(ConfigurationSchemaNode.OA_TAGS, new CollectionType.ArrayType<>(
+                TagExampleBuilder.buildTagArray(Arrays.asList("context")),
+                false,
+                false,
+                StringType.EMPTY_INSTANCE()
+        ));
+        children.put(ConfigurationSchemaNode.OA_EXPORT_HEADER, exportHeader);
+        children.put(ConfigurationSchemaNode.OA_REQUIRED, BooleanExampleBuilder.FALSE);
+        children.put(ConfigurationSchemaNode.OA_CHECKER, FloatCheckerExampleBuilder.OF);
+        children.put(ConfigurationSchemaNode.OA_COMPONENT_QUALIFIERS, CollectionExampleBuilder.COMPONENT_QUALIFIERS(prefix));
+        children.put(ConfigurationSchemaNode.OA_COMPONENT_ADJACENTS, CollectionExampleBuilder.COMPONENT_ADJACENTS(prefix));
+
+        return new PatternComponentType(children);
     }
 
     protected static PatternComponentType buildPatternComponents(
